--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Green Vision</string>
+    <string name="loading">Please wait while data is loading.</string>
 </resources>
